<resources>
    <string name="app_name">BetterStravaDroid</string>
    <string name="connexion">CONNEXION</string>
    <string name="se_connecter">Se connecter</string>
    <string name="creer_un_nouveau_compte"><u>Créer un nouveau compte</u></string>
    <string name="courriel">Courriel</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="inscription">INSCRIPTION</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="se_connecter_underline"><u>Se connecter</u></string>
    <string name="deja_inscrit">Déjà inscrit ?</string>
    <string name="repeter_le_mot_de_passe">Répéter le mot de passe</string>
    <string name="dernier_parcour_effectu">Dernier parcours effectué</string>
    <string name="ajouter_point">Ajout point</string>
    <string name="stop">STOP</string>
    <string name="start">Start</string>
    <string name="title">Titre</string>
    <string name="Description">Description</string>
    <string name="Confirm">Confirmer</string>
    <string name="Cancel">Annuler</string>
    <string name="filtre_parcours_date_depuis">Depuis</string>
    <string name="filtre_parcours_date_jusqua">Jusqu\'a</string>
    <string name="valider">Valider</string>
    <string name="titreConfSupr">Confirmez-vous la suppression ?</string>
    <string name="txtConfSupr">Si vous confirmez, votre parcours sera définitivement supprimé</string>


    <!--                Synthèse titre                              -->
    <string name="distance_parcourue">Distance parcourue</string>
    <string name="temps_de_parcours">Temps de parcours</string>
    <string name="parcours_crees">Parcours crées</string>
    <string name="points_interets">Points d\'intérêts</string>
    <string name="denivele_positif">Dénivelé Positif</string>
    <string name="denivele_negatif">Dénivelé Négatif</string>

    <string name="vitesse_moyenne">Vitesse Moyenne</string>
    <string name="duree_du_parcours">Durée du parcours</string>
    <string name="statistiques_globales">Statistiques globales</string>
    <string name="statistiques_des_30_derniers_jours">Statistiques des 30 derniers jours</string>

    <!--                Stat unité                                  -->
    <string name="km">Km</string>
    <string name="kmh">Km/h</string>
    <string name="m">m</string>
    <string name="h">H</string>

    <!--                ImageView contentDescription                -->
    <string name="iconne_de_l_utilisateur">Icône de l\'utilisateur</string>
    <string name="play_button">Play button</string>
    <string name="active_home_button">Active home button</string>
    <string name="active_path_button">Active path button</string>
    <string name="home_button">Home button</string>
    <string name="path_button_active">Path button active</string>
    <string name="path_button">Path button</string>
    <string name="icone_de_l_application">Icône de l\'application</string>

    <string name="icone_null">Aucune icône</string>
    <string name="icone_lapin">Lapin</string>
    <string name="icone_escargot">Escargot</string>
    <string name="icone_compteur">Compteur de vitesse</string>
    <string name="icone_course">Personne en mouvement</string>
    <string name="icone_chronometre">Chronomètre</string>
    <string name="icone_denivele_negatif">Montagne descendente</string>
    <string name="icone_denivele_positif">Montagne ascension</string>
    <string name="icone_localisation">Point GPS</string>


    <!--                tools help text                             -->
    <string name="date_du_jour">Lundi 4 décembre 2023</string>
    <string name="tv_bonjour_utilisateur">Bonjour, %1$s !</string>
    <string name="titre_du_parcours">Titre du parcours</string>
    <string name="description_du_parcours">Description du parcours</string>

    <string name="placeBeforeTextSearchBarParcour">Nom du parcours</string>
    <string name="dateMin">Date minimale</string>
    <string name="dateMax">Date maximale</string>
    <string name="longueurMin">Longueur minimale</string>
    <string name="longueurMax">Longueur maximale</string>
    <string name="aucunResultat">Oups !\nAucun parcours correspond à vos filtres...</string>

    <!--                api toast text                        -->
    <string name="api_network_error">Connexion avec le serveur distant impossible. Réessayer ultérieurement.</string>

    <!--                connexion toast text                        -->
    <string name="connection_invalid_field">Veuillez saisir votre courriel et votre mot de passe</string>
    <string name="connection_error">Erreur lors de la connexion</string>

    <!--                registration toast text                        -->
    <string name="registration_valid">Inscription réussie</string>
    <string name="registration_error">Erreur lors de l\'inscription</string>

    <!--                home toast text                        -->
    <string name="home_error">Erreur lors de la récupération des informations</string>

    <!--                path toast text                        -->
    <string name="path_infos_error">Erreur lors de la récupération des informations</string>
    <string name="path_point_error">Impossible de créer le point d\'intéret</string>
    <string name="path_permission_refused">Permission non accordée</string>
    <string name="path_no_position">Aucune position trouvée</string>
    <string name="path_save_complete">Parcours enregistré</string>
    <string name="path_save_error">Impossible d\'enregistrer le parcours</string>

    <!--                path list toast text                        -->
    <string name="path_list_error">Erreur lors du chargement des parcours</string>

    <!--                synthesis toast text                        -->
    <string name="synthesis_error">Erreur lors de la récupération du parcours</string>

    <!--                update path toast text                        -->
    <string name="update_path_error">Erreur lors de la modification de la description</string>

</resources>