<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="7dp"
        android:paddingTop="7dp">

        <EditText
            android:id="@+id/et_titre"
            style="@style/loginEditText"
            android:layout_width="match_parent"
            android:autofillHints="emailAddress"
            android:background="@drawable/border_input"
            android:hint="@string/title"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/et_description"
            style="@style/loginEditText"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/border_input"
            android:hint="@string/Description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_titre" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginVertical="7dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/et_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75"/>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:onClick="confirmTitleDescription"
                android:text="@string/Confirm"
                android:textColor="@color/white"
                android:backgroundTint="#3E84C0"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:onClick="cancelTitleDescription"
                android:text="@string/Cancel"
                android:textColor="@color/white"
                android:backgroundTint="#BEBEBE"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
