<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="20dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2DA040">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:cardBackgroundColor="@color/blue_card"
            android:layout_marginHorizontal="9dp"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="136dp"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="false"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dernier_parcour_effectu"
                    android:layout_gravity="center"
                    style="@style/fontTitle"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/tv_last_run"
                    app:layout_constraintBottom_toTopOf="@+id/tv_last_run_date"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/titre_dernier_parcours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titre_du_parcours"
                    style="@style/fontDefault"
                    android:maxLines="1"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/description_dernier_parcours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_du_parcours"
                    style="@style/fontDefault"
                    android:textSize="11sp"
                    android:maxLines="3"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>