<?xml version= "1.0" encoding= "utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:context = ".PageParcours"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <org.osmdroid.views.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="270dp"
        android:layout_height="93dp"
        android:layout_marginHorizontal="5dp"
        app:cardBackgroundColor="@color/blue_card"
        app:cardCornerRadius="15dp"
        android:layout_marginBottom="30dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="5dp"
            android:paddingBottom="5dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline33_30J"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <!-- - - - - - - - Distance parcourue - - - - - - - -->
            <LinearLayout
                android:id="@+id/ll_distance_30J"
                android:layout_width="106dp"
                android:layout_height="51dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline33_30J"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/vit_moyenne" />

                <TextView
                    style="@style/fontDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/vitesse_moyenne"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline33_30J"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_distance_30J">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/rabbit" />

                <TextView
                    android:id="@+id/tv_distance_30J"
                    style="@style/fontSegmentDigit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="0,00"
                    android:textSize="14sp" />

                <TextView
                    style="@style/fontDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kmh"
                    android:textSize="12sp" />

            </LinearLayout>

            <!-- - - - - - - - Temps de parcours - - - - - - - -->
            <LinearLayout
                android:id="@+id/ll_tps_parcours_30J"
                android:layout_width="137dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/guideline33_30J"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/timer" />

                <TextView
                    style="@style/fontDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/duree_du_parcours"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline33_30J"
                app:layout_constraintTop_toBottomOf="@id/ll_tps_parcours_30J">

                <TextView
                    android:id="@+id/tv_tps_parcours_heure_30J"
                    style="@style/fontSegmentDigit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textSize="14sp" />

                <TextView
                    style="@style/fontDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="H"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_tps_parcours_minute_30J"
                    style="@style/fontSegmentDigit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textSize="12sp" />

            </LinearLayout>

            <!-- VSep -->

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline33_30J"
                app:layout_constraintStart_toStartOf="@id/guideline33_30J"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mapview"
        app:layout_constraintStart_toEndOf="@+id/cardView2">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAjout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#4478c2"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/btn_ajout"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:fontFamily="@font/inter_regular"
                android:text="@string/ajouter_point"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="#4478c2"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp">

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:fontFamily="@font/inter_regular"
                android:text="@string/stop"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="126dp"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:fontFamily="@font/inter_regular"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
